# gedcom.ml

./: .travis-ci.sh  .travis.yml  Gedcom.GedcomHelpers.html  Gedcom.GedcomPrint.html  Gedcom.html  LICENSE  README.MD  gedcom.opam  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  opam  type_Gedcom.GedcomHelpers.html  type_Gedcom.GedcomPrint.html  type_Gedcom.html
.github/workflows/: ci.yml
src/: META  Makefile  dune  gedcom.ml  gedcom.mli  opam
test/: dune  test_gedcom.ml
