opam-version: "1.2"

ocaml-version: [ >= "4.00.1" ]

version: "2.0.0"

authors: "Julien Sagot <ju.sagot@gmail.com>"

maintainer: "ju.sagot@gmail.com"

homepage: "http://geneweb.github.io/gedcom.ml/"

bug-reports: "https://github.com/geneweb/gedcom.ml/issues"

depends: [
   "dune" {build}
]

build: [ [ "dune" "build" "-p" name "-j" jobs] ]
