opam-version: "1.2"

name: "gedcom"

version: "2.0.0"

synopsis: "OCaml parser for GEDCOM 5.5.1"

authors: "Julien Sagot <ju.sagot@gmail.com>"

maintainer: "ju.sagot@gmail.com"

homepage: "http://geneweb.github.io/gedcom.ml/"

bug-reports: "https://github.com/geneweb/gedcom.ml/issues"

depends: [
   "dune"
   "ocaml" { >= "4.01.0" }
   "ppx_deriving"
   "ppx_inline_test"
   "re"
]

build: [
  [ "dune" "runtest" ]
  [ "dune" "build" "-p" name "-j" jobs]
]
